Progress - Still have alignment issues, among other problems

--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
-.container{
-    vertical-align: middle;
+body {
+        background: #fff
+        font-family: arial, sans-serif
+        font-color: #000
+    }
+
+a {
+        color: #000;
+        text-decoration: none
+        margin: 20px;
+        
+    }
+    
+a:hover,a:active {
+        text-decoration: underline
+    }
+    
+a:visited {
+        color: #609
+    }
+
+.signin{
+    font-family: Google-sans
+    background-color: #1A73E8;
+    color: #fff
+    margin: 0px 8px;
+    padding:9px 23px;
 }
+
+.search-button{
+    background-color: #F8F9FA
+    margin: 11px;
+    padding: 0px, 16px;
+    
+}
+
+
+
+#footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+}
+
+
+
+
+
+
+
+
